--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.73.4",
+    "react-native-icons": "^0.7.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
