--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.0.1",
     "react-native": "0.73.4",
     "react-native-icons": "^0.7.1",
+    "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0"
