--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@metafic-co/react-native-glassmorphism": "^0.1.2",
@@ -26,8 +27,10 @@
     "react-native": "0.73.4",
     "react-native-icons": "^0.7.1",
     "react-native-maps": "^1.10.3",
+    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
