--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.73.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-icons": "^0.7.1",
-    "react-native-maps": "^1.10.3",
-    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-skeleton-content": "^1.0.28",
