--- a/sanity-preofo/package.json
+++ b/sanity-preofo/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-native-image-picker": "^7.1.0",
     "sanity": "^3.30.1",
     "styled-components": "^6.0.7"
   },
