--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-skeleton-content": "^1.0.28",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
-    "expo-secure-store": "~12.8.1"
+    "expo-secure-store": "~12.8.1",
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
